--- a/pages/register.html
+++ b/pages/register.html
@@ -28,7 +28,7 @@
       rel="stylesheet"
     />
     <!-- CSS  -->
-    <link rel="stylesheet" href="../css/style.min.css" />
+    <link rel="stylesheet" href="../assets/css/style.min.css" />
   </head>
   <body>
     <section class="register-content">
@@ -154,6 +154,6 @@
     ></script>
     <script src="../js/main.js"></script>
     <script src="../js/detail.js"></script>
-    <script src="../js/register.js"></script>
+    <script src="../assets/js/register.js"></script>
   </body>
 </html>
