--- a/pages/register.html
+++ b/pages/register.html
@@ -1,159 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Detail</title>
-    <!-- BOOTSTRAP  -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <!-- FONT AWESOME  -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- GOOGLE FONTS  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- CSS  -->
-    <link rel="stylesheet" href="../assets/css/style.min.css" />
-  </head>
-  <body>
-    <section class="register-content">
-      <div class="container">
-        <div class="row">
-          <h3 class="text-center">Register</h3>
-        </div>
-        <!--  -->
-        <form class="row w-75">
-          <div class="col-12 col-md-12 col-lg-6">
-            <div class="form-group">
-              <input
-                type="email"
-                class="form-control"
-                id="emailInput"
-                aria-describedby="emailHelp"
-                placeholder="email"
-              />
-              <span class="icon-check text-danger">(*)</span>
-              <i class="icon-check checked fa fa-check"></i>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-6">
-            <div class="form-group">
-              <input
-                type="text"
-                class="form-control"
-                id="nameInput"
-                aria-describedby="nameHelp"
-                placeholder="name"
-              />
-              <span class="icon-check text-danger">(*)</span>
-              <i class="icon-check checked fa fa-check"></i>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-6">
-            <div class="form-group">
-              <input
-                type="password"
-                class="form-control"
-                id="passwordInput"
-                aria-describedby="passwordHelp"
-                placeholder="password"
-              />
-              <span class="icon-check text-danger">(*)</span>
-              <i class="icon-check checked fa fa-check"></i>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-6">
-            <div class="form-group">
-              <input
-                type="phone"
-                class="form-control"
-                id="phoneInput"
-                aria-describedby="phoneHelp"
-                placeholder="phone"
-              />
-              <span class="icon-check text-danger">(*)</span>
-              <i class="icon-check checked fa fa-check"></i>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-6">
-            <div class="form-group">
-              <input
-                type="passwordConfirm"
-                class="form-control"
-                id="passwordConfirmInput"
-                aria-describedby="passwordConfirmHelp"
-                placeholder="passwordConfirm"
-                name="passwordConfirm"
-              />
-              <span class="icon-check text-danger">(*)</span>
-              <i class="icon-check checked fa fa-check"></i>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-6">
-            <div class="form-group">
-              <h5>Gender</h5>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="genderInput"
-                  id="genderInputMale"
-                  value="true"
-                  checked
-                />
-                <label class="form-check-label" for="genderInputMale">
-                  Male
-                </label>
-              </div>
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  name="genderInput"
-                  id="genderInputFemale"
-                  value="false"
-                />
-                <label class="form-check-label" for="genderInputFemale">
-                  Female
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-12 col-lg-12 my-4">
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </form>
-        <!--  -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Detail</title>
+  <!-- BOOTSTRAP  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <!-- FONT AWESOME  -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- GOOGLE FONTS  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+  <!-- CSS  -->
+  <link rel="stylesheet" href="../assets/css/style.min.css" />
+  <link rel="stylesheet" href="../assets/css/index.min.css">
+  <link rel="stylesheet" href="../util/css/header.min.css">
+  <link rel="stylesheet" href="../util/css/menu.min.css">
+</head>
+
+<body>
+  <header class="header text-white">
+    <div class="scontainer d-flex justify-content-between align-items-center">
+      <img src="../assets/img/image 3.png" alt="icon-cybersoft" />
+      <div class="header-item d-flex align-items-center">
+        <a href="">
+          <img src="../assets/img/image 8.png" alt="icon-shop" />(1)</a>
+        <a href="">Login</a>
+        <a href="./register.html">Register</a>
       </div>
-    </section>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
-      integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="../js/main.js"></script>
-    <script src="../js/detail.js"></script>
-    <script src="../assets/js/register.js"></script>
-  </body>
+    </div>
+  </header>
+  <section class="menu">
+    <div class="scontainer">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link" href="#">Men</a>
+              <a class="nav-link" href="#">Woman</a>
+              <a class="nav-link" href="#">Kid</a>
+              <a class="nav-link" href="#">Sport</a>
+              <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Kid</a> -->
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </section>
+  <section class="register-content">
+    <div class="container">
+      <div class="row">
+        <h3 class="text-center">Register</h3>
+      </div>
+      <!--  -->
+      <form class="row w-75">
+        <div class="col-12 col-md-12 col-lg-6">
+          <div class="form-group">
+            <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="email" />
+            <span class="icon-check text-danger">(*)</span>
+            <i class="icon-check checked fa fa-check"></i>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6">
+          <div class="form-group">
+            <input type="text" class="form-control" id="nameInput" aria-describedby="nameHelp" placeholder="name" />
+            <span class="icon-check text-danger">(*)</span>
+            <i class="icon-check checked fa fa-check"></i>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6">
+          <div class="form-group">
+            <input type="password" class="form-control" id="passwordInput" aria-describedby="passwordHelp"
+              placeholder="password" />
+            <span class="icon-check text-danger">(*)</span>
+            <i class="icon-check checked fa fa-check"></i>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6">
+          <div class="form-group">
+            <input type="phone" class="form-control" id="phoneInput" aria-describedby="phoneHelp" placeholder="phone" />
+            <span class="icon-check text-danger">(*)</span>
+            <i class="icon-check checked fa fa-check"></i>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6">
+          <div class="form-group">
+            <input type="passwordConfirm" class="form-control" id="passwordConfirmInput"
+              aria-describedby="passwordConfirmHelp" placeholder="passwordConfirm" name="passwordConfirm" />
+            <span class="icon-check text-danger">(*)</span>
+            <i class="icon-check checked fa fa-check"></i>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6">
+          <div class="form-group">
+            <h5>Gender</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="genderInput" id="genderInputMale" value="true"
+                checked />
+              <label class="form-check-label" for="genderInputMale">
+                Male
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="genderInput" id="genderInputFemale" value="false" />
+              <label class="form-check-label" for="genderInputFemale">
+                Female
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-12 my-4">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+      <!--  -->
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="scontainer">
+      <div class="row">
+        <!-- item1 -->
+        <div class="sub-item col-6 col-lg-4">
+          <h3 class="fw-bold">GET HELP</h3>
+          <p>Contact us</p>
+          <p>Shopping</p>
+          <p>NIKEiD</p>
+          <p>Nike+</p>
+        </div>
+        <!-- item2 -->
+        <div class="sub-item col-6 col-lg-4">
+          <h3 class="fw-bold">ORDERS</h3>
+          <p>Payment options</p>
+          <p>Shipping and delivery</p>
+          <p>Returns</p>
+        </div>
+        <!-- item3 -->
+        <div class="sub-item col-6 col-lg-4">
+          <h3 class="fw-bold">REGISTER</h3>
+          <p>
+            Create one account to manager everything you do with Nike,from
+            your shopping preferences to your Nike+ activity.
+          </p>
+          <p><a href="" class="text-danger">Learn more</a></p>
+        </div>
+        <!-- item4 -->
+        <div class="sub-item col-6 col-lg-4">
+          <h3 class="fw-bold">EMAIL SIGNUP</h3>
+          <p>Be the first to know about new products and special offers.</p>
+          <p><a href="" class="text-danger">Sign up now</a></p>
+        </div>
+        <!-- item5 -->
+        <div class="sub-item col-6 col-lg-4">
+          <h3 class="fw-bold">GIFT CARDS</h3>
+          <p>Give the gift that always fits</p>
+          <p><a href="" class="text-danger">View cards</a></p>
+        </div>
+        <!-- item6 -->
+        <div class="sub-item col-6 col-lg-4">
+          <h3 class="fw-bold">STORES NEAR YOU</h3>
+          <p>Locate a Nike retail store or authorized retailer</p>
+          <p><a href="" class="text-danger">Search</a></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
+    integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="../assets/js/register.js"></script>
+</body>
+
 </html>
