--- a/pages/register.html
+++ b/pages/register.html
@@ -47,7 +47,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               <a class="nav-link" href="#">Men</a>
               <a class="nav-link" href="#">Woman</a>
               <a class="nav-link" href="#">Kid</a>
